--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,6 @@
     <color name="green2">#1D9F32</color>
     <color name="black_overlay">#66000000</color>
     <color name="blue2">#2F4E69</color>
+    <color name="red">#D32F2F</color>
+
 </resources>
