--- a/app/src/main/res/layout/fragment_shout_final_victory.xml
+++ b/app/src/main/res/layout/fragment_shout_final_victory.xml
@@ -1,14 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             tools:context=".games.ShoutFinalVictory">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              tools:context=".games.ShoutFinalVictory"
+              android:background="@android:color/transparent" android:orientation="vertical">
+    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent"
+                                                       android:layout_height="match_parent"
+                                                       android:layout_weight="1">
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" android:id="@+id/pl2"
+                android:visibility="visible"
+                android:textColor="@color/white"
+                android:textSize="50sp"
+                android:rotation="180"
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="154dp"
+                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="29dp"
+                android:layout_marginEnd="155dp" app:layout_constraintEnd_toEndOf="parent"
+        />
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="final call"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent"
+                                                       android:layout_height="match_parent"
+                                                       android:layout_weight="1">
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" android:id="@+id/pl1"
+                android:visibility="visible"
+                android:textColor="@color/white"
+                android:textSize="50sp"
+                android:gravity="center"
+                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="100dp"
+                android:layout_marginEnd="155dp" app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="154dp"/>
 
-</FrameLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+</LinearLayout>
