--- a/app/src/main/res/layout/fragment_area_game.xml
+++ b/app/src/main/res/layout/fragment_area_game.xml
@@ -48,7 +48,7 @@
                 android:layout_marginEnd="155dp" app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="154dp"/>
         <TextView android:layout_width="wrap_content"
-                  android:layout_height="30dp"
+                  android:layout_height="wrap_content"
                   android:text="text"
                   android:id="@+id/area_txt2"
                   android:gravity="center"
