--- a/app/src/main/res/layout/fragment_capitals.xml
+++ b/app/src/main/res/layout/fragment_capitals.xml
@@ -60,7 +60,7 @@
                 android:layout_marginEnd="155dp" app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="154dp"/>
         <TextView android:layout_width="wrap_content"
-                  android:layout_height="30dp"
+                  android:layout_height="wrap_content"
                   android:text="text"
                   android:id="@+id/txt2"
                   android:gravity="center"
@@ -75,7 +75,7 @@
                 android:id="@+id/txt21"
                 android:textSize="22sp"
                 android:gravity="center"
-                android:layout_height="30dp"
+                android:layout_height="wrap_content"
                 app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/txt2"/>
 
