--- a/app/src/main/res/layout/fragment_color_names.xml
+++ b/app/src/main/res/layout/fragment_color_names.xml
@@ -3,13 +3,13 @@
               xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              tools:context=".games.Population"
+              tools:context=".games.ColorNames"
               android:background="@android:color/transparent" android:orientation="vertical">
     <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent"
                                                        android:layout_height="match_parent"
                                                        android:layout_weight="1">
         <TextView
-                android:text="Population"
+                android:text="Area"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:id="@+id/explanation1"
                 android:visibility="visible"
@@ -37,7 +37,7 @@
                                                        android:layout_height="match_parent"
                                                        android:layout_weight="1">
         <TextView
-                android:text="Population"
+                android:text="Area"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:id="@+id/explanation2"
                 android:visibility="visible"
