--- a/app/src/main/res/layout/fragment_capitals.xml
+++ b/app/src/main/res/layout/fragment_capitals.xml
@@ -9,7 +9,7 @@
                                                        android:layout_height="match_parent"
                                                        android:layout_weight="1">
         <TextView
-                android:text="Population"
+                android:text="Capitals"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:id="@+id/explanation1"
                 android:visibility="visible"
@@ -22,7 +22,7 @@
         />
         <TextView android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
-                  android:text="text"
+                  android:text="Capitals"
                   android:id="@+id/txt11"
                   android:gravity="center"
                   android:textSize="22sp"
@@ -49,7 +49,7 @@
                                                        android:layout_height="match_parent"
                                                        android:layout_weight="1">
         <TextView
-                android:text="Population"
+                android:text="Capitals"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:id="@+id/explanation2"
                 android:visibility="visible"
