--- a/app/src/main/res/layout/fragment_color_names.xml
+++ b/app/src/main/res/layout/fragment_color_names.xml
@@ -9,7 +9,7 @@
                                                        android:layout_height="match_parent"
                                                        android:layout_weight="1">
         <TextView
-                android:text="Area"
+                android:text="Color Names"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:id="@+id/explanation1"
                 android:visibility="visible"
@@ -37,7 +37,7 @@
                                                        android:layout_height="match_parent"
                                                        android:layout_weight="1">
         <TextView
-                android:text="Area"
+                android:text="Color Names"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:id="@+id/explanation2"
                 android:visibility="visible"
