--- a/app/src/main/res/layout/fragment_five_different.xml
+++ b/app/src/main/res/layout/fragment_five_different.xml
@@ -9,64 +9,64 @@
 
 
     <ImageView
-            android:src="@drawable/g1"
+            android:src="@drawable/a1"
             android:layout_width="100dp"
-            android:layout_height="100dp" android:id="@+id/dice1"
-            android:visibility="visible"
+            android:layout_height="100dp" android:id="@+id/i1"
+            android:visibility="invisible"
             android:paddingHorizontal="10dp" android:paddingVertical="10dp"
-            app:layout_constraintTop_toBottomOf="@+id/dice2" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="25dp" app:layout_constraintEnd_toStartOf="@+id/dice5"
+            app:layout_constraintTop_toBottomOf="@+id/i2" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="25dp" app:layout_constraintEnd_toStartOf="@+id/i5"
             app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="243dp"
     />
     <ImageView
-            android:src="@drawable/g1"
+            android:src="@drawable/a1"
             android:layout_width="100dp"
-            android:layout_height="100dp" android:id="@+id/dice2"
-            android:visibility="visible"
+            android:layout_height="100dp" android:id="@+id/i2"
+            android:visibility="invisible"
             android:paddingHorizontal="10dp" android:paddingVertical="10dp"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="246dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="25dp" app:layout_constraintEnd_toStartOf="@+id/dice6"
-            app:layout_constraintBottom_toTopOf="@+id/dice1"/>
+            android:layout_marginStart="25dp" app:layout_constraintEnd_toStartOf="@+id/i6"
+            app:layout_constraintBottom_toTopOf="@+id/i1"/>
     <ImageView
-            android:src="@drawable/g1"
+            android:src="@drawable/a1"
             android:layout_width="100dp"
-            android:layout_height="100dp" android:id="@+id/dice3"
-            android:visibility="visible"
+            android:layout_height="100dp" android:id="@+id/i3"
+            android:visibility="invisible"
             android:paddingHorizontal="10dp" android:paddingVertical="10dp"
 
             android:layout_marginEnd="26dp"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/dice5"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/i5"
             app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="243dp"
-            android:layout_marginTop="1dp" app:layout_constraintTop_toBottomOf="@+id/dice4"/>
+            android:layout_marginTop="1dp" app:layout_constraintTop_toBottomOf="@+id/i4"/>
     <ImageView
-            android:src="@drawable/g1"
+            android:src="@drawable/a3"
             android:layout_width="100dp"
-            android:layout_height="100dp" android:id="@+id/dice4"
-            android:visibility="visible"
+            android:layout_height="100dp" android:id="@+id/i4"
+            android:visibility="invisible"
             android:paddingHorizontal="10dp" android:paddingVertical="10dp"
-            app:layout_constraintBottom_toTopOf="@+id/dice3" app:layout_constraintStart_toEndOf="@+id/dice6"
+            app:layout_constraintBottom_toTopOf="@+id/i3" app:layout_constraintStart_toEndOf="@+id/i6"
             android:layout_marginEnd="26dp" app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="246dp"/>
     <ImageView
-            android:src="@drawable/g1"
+            android:src="@drawable/a1"
             android:layout_width="100dp"
-            android:layout_height="100dp" android:id="@+id/dice5"
-            android:visibility="visible"
+            android:layout_height="100dp" android:id="@+id/i5"
+            android:visibility="invisible"
             android:paddingHorizontal="10dp" android:paddingVertical="10dp"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="243dp" android:layout_marginTop="1dp"
-            app:layout_constraintTop_toBottomOf="@+id/dice6" app:layout_constraintStart_toEndOf="@+id/dice1"
-            app:layout_constraintEnd_toStartOf="@+id/dice3"/>
+            app:layout_constraintTop_toBottomOf="@+id/i6" app:layout_constraintStart_toEndOf="@+id/i1"
+            app:layout_constraintEnd_toStartOf="@+id/i3"/>
     <ImageView
-            android:src="@drawable/g1"
+            android:src="@drawable/a1"
             android:layout_width="100dp"
-            android:layout_height="100dp" android:id="@+id/dice6"
-            android:visibility="visible"
+            android:layout_height="100dp" android:id="@+id/i6"
+            android:visibility="invisible"
             android:paddingHorizontal="10dp" android:paddingVertical="10dp"
-            app:layout_constraintBottom_toTopOf="@+id/dice5"
+            app:layout_constraintBottom_toTopOf="@+id/i5"
             app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="246dp"
-            app:layout_constraintStart_toEndOf="@+id/dice2" app:layout_constraintEnd_toStartOf="@+id/dice4"/>
+            app:layout_constraintStart_toEndOf="@+id/i2" app:layout_constraintEnd_toStartOf="@+id/i4"/>
     <TextView
             android:text="5 Different"
             android:layout_width="wrap_content"
@@ -92,5 +92,5 @@
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="177dp" android:layout_marginEnd="176dp"
             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.502"
-            app:layout_constraintTop_toBottomOf="@+id/dice6" android:layout_marginTop="100dp"/>
+            app:layout_constraintTop_toBottomOf="@+id/i6" android:layout_marginTop="100dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
