--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -57,6 +57,7 @@
             android:spinnerMode="dropdown"
             android:background="@drawable/drop_dwon_background"
             android:id="@+id/difficulty"
+            android:popupBackground="@android:color/transparent"
             app:layout_constraintTop_toBottomOf="@+id/game_selection_text"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
